# daylo

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docker/: entrypoint.sh  nginx.conf
docs/: RELEASING.md
docs/plans/: 2026-02-26-s5-05-animations-bottomsheet-design.md  2026-02-26-s5-05-implementation.md  2026-03-07-s5-animations-v2-design.md  2026-03-07-s5-animations-v2-implementation.md
e2e/: app.spec.ts
public/: site.webmanifest
scripts/: generate-icons.mjs  sync-version.js
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/activities/: ActivityForm.test.tsx  ActivityForm.tsx  ActivityList.test.tsx  ActivityList.tsx  QuickLog.test.tsx  QuickLog.tsx  index.ts
src/components/calendar/: DayCell.tsx  HeatmapLegend.test.tsx  HeatmapLegend.tsx  MiniHeatmap.test.tsx  MiniHeatmap.tsx  MonthCard.test.tsx  (+13 more)
src/hooks/: index.ts  useAnimatedPresence.test.ts  useAnimatedPresence.ts  useAppVersion.test.ts  useAppVersion.ts  useFocusTrap.ts  useMediaQuery.test.ts  useMediaQuery.ts  useSwipeGesture.test.ts  useSwipeGesture.ts
src/lib/: colors.test.ts  colors.ts  dataExport.test.ts  dataExport.ts  dates.test.ts  dates.ts
src/store/: index.test.ts  index.ts  toast.test.ts  toast.ts
src/test/: setup.ts
src/types/: index.ts
(+27 files in other folders)
